[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/win_screen.gd" type="Script" id=1]
[ext_resource path="res://styles/ui_back.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/press_start_2p.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/ui/score.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/time.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/death.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="WinScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 255.0
margin_top = 121.0
margin_right = 705.0
margin_bottom = 419.0
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 449.0
margin_bottom = 297.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 416.0
margin_bottom = 264.0
custom_constants/separation = 16

[node name="Congratulations" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Congratulations!"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 384.0
margin_bottom = 168.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 128.0
margin_right = 256.0
margin_bottom = 128.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 2

[node name="ScoreSprite" type="TextureRect" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="ScoreText" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 48.0
margin_top = 8.0
margin_right = 128.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "130"

[node name="TimeSprite" type="TextureRect" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 48.0
margin_right = 32.0
margin_bottom = 80.0
texture = ExtResource( 5 )

[node name="TimeText" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 48.0
margin_top = 56.0
margin_right = 128.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
text = "00:00"

[node name="DeathSprite" type="TextureRect" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 96.0
margin_right = 32.0
margin_bottom = 128.0
texture = ExtResource( 6 )

[node name="DeathText" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 48.0
margin_top = 104.0
margin_right = 128.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
text = "100"

[node name="GradeText" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 384.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 4 )
text = "Grade: A"
align = 1

[node name="Continue" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 384.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 2 )
text = "Press JUMP to continue."
align = 1
